Made changes to the db tables, added new columns, to distinguish original stock and then the available stock, so that the record updations can be made correctly. More testing to be done.

--- a/www/index.html
+++ b/www/index.html
@@ -159,7 +159,8 @@
                                         <th>Category</th>
                                         <th>Device</th>
                                         <th>Brand</th>
-                                        <th>Quantity</th>
+                                        <th>Stock</th>
+                                        <th>Currently Available</th>
                                         <th>Condition</th>
                                         <th>Description</th>
                                         <th>QR Data</th>
@@ -171,6 +172,7 @@
                                         <td>{{entry.devCategory}}</td>
                                         <td>{{entry.devName}}</td>
                                         <td>{{entry.brandName}}</td>
+                                        <td>{{entry.originalStock}}</td>
                                         <td>{{entry.devQuantity}}</td>
                                         <td>{{entry.devCondition}}</td>
                                         <td>{{entry.Description}}</td>
