Added Delete functionality to Assignments (Deleting assignments)

--- a/www/index.html
+++ b/www/index.html
@@ -263,6 +263,7 @@
                                         <th>Room No.</th>
                                         <th>Device</th>
                                         <th>Condition</th>
+                                        <th>Quantity Allotted</th>
                                         <th>Comments</th>
                                     </tr>
                                     </thead>
@@ -274,6 +275,7 @@
                                         <td>{{entry.Room}}</td>
                                         <td>{{entry.Device}}</td>
                                         <td>{{entry.Condition}}</td>
+                                        <td>{{entry.Quantity}}</td>
                                         <td>{{entry.Comments}}</td>
                                     </tr>
                                     </tbody>
@@ -298,6 +300,7 @@
                                         <th>Room No.</th>
                                         <th>Device</th>
                                         <th>Condition</th>
+                                        <th>Quantity Allotted</th>
                                         <th>Comments</th>
                                     </tr>
                                     </thead>
@@ -309,6 +312,7 @@
                                         <td>{{entry.Room}}</td>
                                         <td>{{entry.Device}}</td>
                                         <td>{{entry.Condition}}</td>
+                                        <td>{{entry.Quantity}}</td>
                                         <td>{{entry.Comments}}</td>
                                     </tr>
                                     </tbody>
